<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    tools:context="com.grudus.nativeexamshelper.activities.LoginPageActivity"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="?attr/background">

    <FrameLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
    
            <include layout="@layout/toolbar" />
    
    
    
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/activity_horizontal_margin">
    
    
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
    
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="20dp">
    
                        <AutoCompleteTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textAutoComplete"
                            android:id="@+id/login_view_login"
                            android:lines="1"
                            android:hint="@string/login_login"/>
    
                    </android.support.design.widget.TextInputLayout>
    
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
    
                        <com.grudus.nativeexamshelper.layouts.ShowHidePasswordView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/login_view_password"
                            android:inputType="textPassword"/>
    
                    </android.support.design.widget.TextInputLayout>
    
    
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/login_button_login"
                        android:id="@+id/login_view_login_button"
                        android:layout_marginTop="30dp"
                        android:textAlignment="center"/>
    
    
    
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/login_register"
                        android:id="@+id/login_view_registry_button"
                        android:textAlignment="center"
                        android:layout_marginTop="20dp"/>
    
                    <com.google.android.gms.common.SignInButton
                        android:id="@+id/google_sign_in_button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="20dp"/>
    
                </LinearLayout>
    
    
            </ScrollView>
    
        </LinearLayout>
    
    
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:id="@+id/progress_bar_login_parent"
            android:background="#bb000000"
            android:visibility="gone">
    
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/progress_bar_login" />
    
        </LinearLayout>
    

    </FrameLayout>

    <include layout="@layout/navigation_view" />

</android.support.v4.widget.DrawerLayout>
