<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background"
    tools:activity="com.grudus.nativeexamshelper.activities.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:orientation="vertical">

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:scaleX="0.5"
                    android:scaleY="0.5"
                    android:id="@+id/register_view_login_progress"
                    android:layout_alignParentEnd="true"/>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/register_view_login_parent"
                    android:hint="@string/register_username"
                    >

                    <EditText
                        android:id="@+id/register_view_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </android.support.design.widget.TextInputLayout>


                <com.grudus.nativeexamshelper.layouts.ShowHidePasswordView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/register_view_login_parent"
                    android:layout_marginTop="10dp"
                    android:id="@+id/register_view_password_fragment">


                </com.grudus.nativeexamshelper.layouts.ShowHidePasswordView>

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:scaleX="0.5"
                    android:scaleY="0.5"
                    android:id="@+id/register_view_email_progress"
                    android:layout_below="@id/register_view_password_fragment"

                    android:layout_marginTop="10dp"
                    android:layout_alignParentEnd="true"/>


                <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/register_view_password_fragment"
                    android:id="@+id/register_view_email_parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_email">

                    <EditText
                        android:id="@+id/register_view_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"/>

                </android.support.design.widget.TextInputLayout>


                <Button
                    android:layout_width="match_parent"
                    android:id="@+id/registry_view_button"
                    android:layout_below="@id/register_view_email_parent"
                    android:layout_marginTop="30dp"
                    android:layout_height="wrap_content"
                    android:text="@string/register_button"
                    android:textAlignment="center"/>

            </RelativeLayout>


        </ScrollView>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/progress_bar_register_parent"
        android:visibility="gone"
        android:background="#bb000000">


        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

    </LinearLayout>



</FrameLayout>
